# AXIOM-energy-audit-platform

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml  release.yml  sync-to-hf.yml
docs/: AXIOM_prompt.md
notebooks/: 01_data_ingestion.ipynb
src/ai_engine/: __init__.py  anomaly_triage.py  baseline_model.py  classifier.py
src/axiom/: benchmarking.py  core.py  report.py
src/ingestion/: ademe_loader.py  pdf_parser.py
src/processing/: __init__.py  preprocessor.py
tests/: test_core.py  test_pdf_parser.py
