[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-energy-audit"
version = "0.1.0"
description = "EU-compliant energy audit platform with AI analysis"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
strict_optional = true
